--- a/architecture-examples/knockback/index.html
+++ b/architecture-examples/knockback/index.html
@@ -5,6 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Knockback.js • TodoMVC</title>
 	<link rel="stylesheet" href="../../assets/base.css">
+	<!--[if IE]>
+	<script src="../../assets/ie.js"></script>
+	<![endif]-->
 </head>
 <body>
 	<section id="todoapp">
@@ -47,27 +50,23 @@
 	</section>
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
-		<p>Template by <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
+		<p>Template by <a href="http://github.com/sindresorhus">Sindre Sorhus</a></p>
 		<p>Created by <a href="https://github.com/kmalakoff">Kevin Malakoff</a>. <br/>
 		Please try out the <a href="http://kmalakoff.github.com/knockback-todos/">enhanced version</a> <br/>
 		with localization, priority colors, and lazy loading <br/>
 		to see just how dynamic <a href="https://github.com/kmalakoff/knockback">Knockback.js</a> can be!</p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
-
 	<!-- Demo Dependencies -->
-	<script src="js/lib/json2.js"></script>
+	<script src="../../assets/base.js"></script>
 	<script src="../../assets/jquery.min.js"></script>
-
 	<!-- Knockback Dependencies -->
 	<script src="js/lib/underscore-min.js"></script>
 	<script src="js/lib/backbone-min.js"></script>
 	<script src="js/lib/knockout-2.0.0.js"></script>
 	<script src="js/lib/knockback.min.js"></script>
-
 	<!-- More Demo Dependencies -->
 	<script src="js/lib/backbone-localstorage.js"></script>
-
 	<!-- Demo Components -->
 	<script src="js/models/todo.js"></script>
 	<script src="js/models/todo_collection.js"></script>
@@ -76,7 +75,6 @@
 	<script src="js/viewmodels/todos.js"></script>
 	<script src="js/viewmodels/footer.js"></script>
 	<script src="js/routers/app.js"></script>
-
 	<!-- The Demo -->
 	<script src="../../assets/base.js"></script>
 	<script src="js/app.js"></script>
