--- a/architecture-examples/angularjs/index.html
+++ b/architecture-examples/angularjs/index.html
@@ -1,53 +1,54 @@
 <!doctype html>
-<html xmlns:ng="http://angularjs.org/" xmlns:my="http://rx.org">
+<html ng-app="todomvc">
 <head>
-	<meta charset="utf-8">
-	<title>AngularJS - TodoMVC</title>
-	<link rel="stylesheet" href="css/base.css">
-	<link rel="stylesheet" href="css/app.css">
-	<!--[if IE]>
-	<script src="../../assets/ie.js"></script>
-	<![endif]-->
+  <meta charset="utf-8">
+  <title>AngularJS - TodoMVC</title>
+  <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/app.css">
+  <!--[if IE]>
+  <script src="../../assets/ie.js"></script>
+  <![endif]-->
 </head>
 <body>
-	<div ng:controller="App.Controllers.TodoController" id="todoapp">
-		<header>
-			<h1>Todos</h1>
-			<form id="todo-form" ng:submit="addTodo()">
-			<input id="new-todo" name="newTodo" type="text" placeholder="What needs to be done?">
-			</form>
-		</header>
-		<section id="main" ng:show="hasTodos()">
-			<input id="toggle-all" type="checkbox" name="allChecked" ng:click="toggleAllStates()">
-			<label for="toggle-all">Mark all as complete</label>
-			<ul id="todo-list">
-				<li ng:repeat="todo in todos" my:dblclick="editTodo(todo)" ng:class="(todo.done && ' done ') + (todo.editing && ' editing ')">
-					<div class="view">
-						<input class="toggle" type="checkbox" name="todo.done">
-						<label>{{ todo.title }}</label>
-						<a class="destroy" ng:click="removeTodo(todo)"></a>
-					</div>
-					<form ng:submit="finishEditing(todo)">
-						<input class="edit" type="text" name="todo.title" my:focus="todo.editing" my:blur="finishEditing(todo)">
-					</form>
-				</li>
-			</ul>
-		</section>
-		<footer ng:show="hasTodos()">
-			<a id="clear-completed" ng:click="clearCompletedItems()" ng:show="hasFinishedTodos()">{{ clearItemsText() }}</a>
-			<div id="todo-count"><b>{{ remainingTodos() }}</b> {{ itemsLeftText() }}</div>
-		</footer>
-	</div>
-	<div id="instructions">
-		Double-click to edit a todo.
-	</div>
-	<div id="credits">
-		Created by <a href="http://twitter.com/cburgdorf">Christoph Burgdorf</a>.
-	</div>
-	<script src="../../assets/base.js"></script>
-	<script src="js/booter.js"></script>
-	<script src="js/libs/angular/angular.min.js" ng:autobind></script>
-	<script src="js/controllers.js"></script>
-	<script src="js/directive.js"></script>
+  <div ng-controller="App.Controllers.TodoController" id="todoapp">
+    <header>
+      <h1>Todos</h1>
+      <form id="todo-form" ng-submit="addTodo()">
+        <input type="text" id="new-todo" name="newTodo" ng-model="newTodo" placeholder="What needs to be done?">
+      </form>
+    </header>
+    <section id="main" ng-show="todos.length">
+      <input type="checkbox" id="toggle-all" ng-click="markAllDone()" ng-checked="remainingTodos().length == 0">
+      <label for="toggle-all">Mark all as complete</label>
+      <ul id="todo-list">
+        <li ng-repeat="todo in todos" ng-dblclick="editTodo(todo)" ng-class="{done: todo.done, editing: todo.editing}">
+          <div class="view">
+            <input type="checkbox" class="toggle" name="todo.done" ng-model="todo.done">
+            <label>{{todo.title}}</label>
+            <a class="destroy" ng-click="removeTodo(todo)"></a>
+          </div>
+          <form ng-submit="finishEditing(todo)">
+            <input type="text" class="edit" name="todo.title" ng-model="todo.title" my:blur="finishEditing(todo)">
+          </form>
+        </li>
+      </ul>
+    </section>
+    <footer ng-show="todos.length">
+      <a id="clear-completed" ng-click="clearDoneTodos()" ng-show="doneTodos().length">Clear {{doneTodos().length}} items</a>
+      <div id="todo-count">
+        <ng-pluralize count="remainingTodos().length" when="todoForms"></ng-pluralize>
+      </div>
+    </footer>
+  </div>
+  <div id="instructions">
+    Double-click to edit a todo.
+  </div>
+  <div id="credits">
+    Credits: <a href="http://twitter.com/cburgdorf">Christoph Burgdorf</a>, <a href="http://ericbidelman.com">Eric Bidelman</a>
+  </div>
+  <script src="../../assets/base.js"></script>
+  <script src="js/booter.js"></script>
+  <script src="js/libs/angular/angular.min.js"></script>
+  <script src="js/controllers.js"></script>
 </body>
 </html>
