--- a/architecture-examples/knockback/index.html
+++ b/architecture-examples/knockback/index.html
@@ -30,10 +30,7 @@
 			</ul>
 		</section>
 		<footer id="footer" data-bind="block: todos.tasks_exist">
-			<span id="todo-count">
-				<strong data-bind="text: footer.remaining_count"></strong>
-				<span data-bind="text: footer.remaining_text"></span>
-			</span>
+			<span id="todo-count" data-bind="html: footer.remaining_text"></span>
 			<ul id="filters">
 				<li>
 					<a href="#/" data-bind="css: {selected: settings.list_filter_mode()==''}">All</a>
@@ -63,7 +60,7 @@
 	<!-- Knockback Dependencies -->
 	<script src="js/lib/underscore-min.js"></script>
 	<script src="js/lib/backbone-min.js"></script>
-	<script src="js/lib/knockout-2.0.0.js"></script>
+	<script src="js/lib/knockout-2.1.0.js"></script>
 	<script src="js/lib/knockback.min.js"></script>
 	<!-- More Demo Dependencies -->
 	<script src="js/lib/backbone.localStorage-min.js"></script>
@@ -76,7 +73,6 @@
 	<script src="js/viewmodels/footer.js"></script>
 	<script src="js/routers/app.js"></script>
 	<!-- The Demo -->
-	<script src="../../assets/base.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
