--- a/labs/dependency-examples/stapes_require/index.html
+++ b/labs/dependency-examples/stapes_require/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Stapes.js • TodoMVC</title>
-	<link rel="stylesheet" href="css/base.css">
+	<link rel="stylesheet" href="../../../assets/base.css">
 </head>
 <body>
 	<section id="todoapp">
@@ -11,16 +11,13 @@
 			<h1>todos</h1>
 			<input id="new-todo" placeholder="What needs to be done?" autofocus>
 		</header>
-		<!-- this section should hidden by default and shown when there are todos -->
 		<section id="main">
 			<input id="toggle-all" type="checkbox">
 			<label for="toggle-all">Mark all as complete</label>
 			<ul id="todo-list"></ul>
 		</section>
-		<!-- this footer should hidden by default and shown when there are todos -->
 		<footer id="footer">
-			<span id="todo-count"><strong>1</strong> item left</span>
-			<!-- remove this if you don't implement routing -->
+			<span id="todo-count"><strong>0</strong> item left</span>
 			<ul id="filters">
 				<li>
 					<a class="selected" href="#/">All</a>
@@ -37,11 +34,26 @@
 	</section>
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
-		<!-- change this out with your name and url ↓ -->
 		<p>Created by <a href="http://github.com/hay/stapes/">Hay Kranen</a>.</p>
-		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
+
+	<script id="todo-template" type="text/x-handlebars-template">
+		{{#todos}}
+		<li class="{{#completed}}completed{{/completed}}" data-id="{{id}}">
+			<div class="view">
+				<input class="toggle" type="checkbox" {{#completed}}checked="checked"{{/completed}}>
+				<label>{{title}}</label>
+				<button class="destroy"></button>
+			</div>
+			<input class="edit" value="{{title}}">
+		</li>
+		{{/todos}}
+	</script>
+
+	<script src="../../../assets/handlebars.min.js"></script>
+	<script src="js/lib/stapes.js"></script>
 	<script src="js/lib/zepto.js"></script>
+
 	<script src="js/lib/require.js" data-main="js/app"></script>
 </body>
 </html>
