--- a/labs/architecture-examples/sammyjs/index.html
+++ b/labs/architecture-examples/sammyjs/index.html
@@ -4,9 +4,9 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>Sammy.js • TodoMVC</title>
-		<link rel="stylesheet" href="app.css">
+		<link rel="stylesheet" href="css/app.css">
 		<!--[if IE]>
-		<script src="../../assets/ie.js"></script>
+		<script src="../../../assets/ie.js"></script>
 		<![endif]-->
 	</head>
 	<body>
@@ -31,11 +31,11 @@
 			<br />
 			based on some code by Brandon Aaron
 		</div>
-		<script src="../../assets/base.js"></script>
-		<script src="../../assets/jquery.min.js"></script>
-		<script src="lib/sammy.js"></script>
-		<script src="lib/sammy.template.js"></script>
-		<script src="lib/model.js"></script>
-		<script src="app.js"></script>
+		<script src="../../../assets/base.js"></script>
+		<script src="../../../assets/jquery.min.js"></script>
+		<script src="js/lib/sammy.js"></script>
+		<script src="js/lib/sammy.template.js"></script>
+		<script src="js/lib/model.js"></script>
+		<script src="js/app.js"></script>
 	</body>
 </html>
