--- a/labs/architecture-examples/backbone_marionette/index.html
+++ b/labs/architecture-examples/backbone_marionette/index.html
@@ -1,83 +1,91 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Marionette • TodoMVC</title>
-  <link rel="stylesheet" href="../../../assets/base.css">
-  <link rel="stylesheet" href="css/app.css">
-  <!--[if IE]>
-  <script src="../../../assets/ie.js"></script>
-  <![endif]-->
-</head>
-<body>
-<section id="todoapp">
-  <header id="header"></header>
-  <section id="main"></section>
-  <footer id="footer"></footer>
-</section>
-<footer id="info">
-  <p>Double-click to edit a todo</p>
 
-  <p>Created by <a href="http://github.com/jsoverson">Jarrod Overson</a></p>
-</footer>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Marionette • TodoMVC</title>
+    <link rel="stylesheet" href="../../../assets/base.css">
+    <link rel="stylesheet" href="css/app.css">
+    <!--[if IE]>
+    <script src="../../../assets/ie.js"></script>
+    <![endif]-->
 
-<!-- vendor libraries -->
-<script src="../../../assets/base.js"></script>
-<script src="../../../assets/jquery.min.js"></script>
-<script src="../../../assets/lodash.min.js"></script>
-<script src="js/lib/backbone.js"></script>
-<script src="js/lib/backbone-localStorage.js"></script>
-<script src="js/lib/backbone.marionette.js"></script>
+    <script type="text/html" id="template-footer">
+      <span id="todo-count"><strong></strong> items left</span>
+      <ul id="filters">
+        <li>
+        <a href="#">All</a>
+        </li>
+        <li>
+        <a href="#active">Active</a>
+        </li>
+        <li>
+        <a href="#completed">Completed</a>
+        </li>
+      </ul>
+      <button id="clear-completed">Clear completed</button>
+    </script>
 
-<!-- application libraries -->
-<script src="js/models/Todo.js"></script>
-<script src="js/collections/TodoList.js"></script>
-<script src="js/Router.js"></script>
+    <script type="text/html" id="template-header">
+      <h1>todos</h1>
+      <input id="new-todo" placeholder="What needs to be done?" autofocus>
+    </script>
 
-<!-- application views -->
-<script src="js/views/Footer.js"></script>
-<script src="js/views/Header.js"></script>
-<script src="js/views/TodoItemView.js"></script>
-<script src="js/views/TodoListCompositeView.js"></script>
+    <script type="text/html" id="template-todoItemView">
+      <div class="view">
+        <input class="toggle" type="checkbox" <% if (completed) { %>checked<% } %>>
+        <label><%= title %></label>
+        <button class="destroy"></button>
+      </div>
+      <input class="edit" value="<%= title %>">
+    </script>
 
-<!-- application -->
-<script src="js/app.js"></script>
+    <script type="text/html" id="template-todoListCompositeView">
+      <input id="toggle-all" type="checkbox">
+      <label for="toggle-all">Mark all as complete</label>
+      <ul id="todo-list"></ul>
+    </script>
 
-<script type="text/html" id="template-footer">
-  <span id="todo-count"><strong></strong> items left</span>
-  <ul id="filters">
-    <li>
-      <a href="#/">All</a>
-    </li>
-    <li>
-      <a href="#/active">Active</a>
-    </li>
-    <li>
-      <a href="#/completed">Completed</a>
-    </li>
-  </ul>
-  <button id="clear-completed">Clear completed</button>
-</script>
+  </head>
 
-<script type="text/html" id="template-header">
-  <h1>todos</h1>
-  <input id="new-todo" placeholder="What needs to be done?" autofocus>
-</script>
+  <body>
+    <section id="todoapp">
+      <header id="header"></header>
+      <section id="main"></section>
+      <footer id="footer"></footer>
+    </section>
 
-<script type="text/html" id="template-todoItemView">
-  <div class="view">
-    <input class="toggle" type="checkbox" <% if (completed) { %>checked<% } %>>
-    <label><%= title %></label>
-    <button class="destroy"></button>
-  </div>
-  <input class="edit" value="<%= title %>">
-</script>
+    <footer id="info">
+      <p>Double-click to edit a todo</p>
+      <p>
+        Created by <a href="http://github.com/jsoverson">Jarrod Overson</a>
+        and <a href="http://github.com/derickbailey">Derick Bailey</a>,
+        using <a href="http://marionettejs.com">Backbone.Marionette</a>
+      </p>
+      <p>Further variations on the Backbone.Marionette app are also <a href="https://github.com/marionettejs/backbone.marionette/wiki/Projects-and-websites-using-marionette">available</a>.</p>
+    </footer>
 
-<script type="text/html" id="template-todoListCompositeView">
-  <input id="toggle-all" type="checkbox">
-  <label for="toggle-all">Mark all as complete</label>
-  <ul id="todo-list"></ul>
-</script>
-</body>
+    <!-- vendor libraries -->
+    <script src="../../../assets/base.js"></script>
+    <script src="../../../assets/jquery.min.js"></script>
+    <script src="../../../assets/lodash.min.js"></script>
+    <script src="js/lib/backbone.js"></script>
+    <script src="js/lib/backbone-localStorage.js"></script>
+    <script src="js/lib/backbone.marionette.js"></script>
+
+    <!-- application -->
+    <script src="js/TodoMVC.js"></script>
+    <script src="js/TodoMVC.Todos.js"></script>
+    <script src="js/TodoMVC.Layout.js"></script>
+    <script src="js/TodoMVC.TodoList.Views.js"></script>
+    <script src="js/TodoMVC.TodoList.js"></script>
+
+    <script>
+      $(function(){
+        // Start the TodoMVC app (defined in js/TodoMVC.js)
+        TodoMVC.start();
+      });
+    </script>
+  </body>
 </html>
