--- a/labs/architecture-examples/dermis/index.html
+++ b/labs/architecture-examples/dermis/index.html
@@ -16,24 +16,24 @@
 			<input id="new-todo" placeholder="What needs to be done?" autofocus>
 		</header>
 		<div id="content">
-			<section id="main" data-show=".items | length | overZero">
-				<input id="toggle-all" type="checkbox" data-on-click=":toggle" data-checked=":allCompleted < .items" data-show=":all < .items | length | overZero">
+			<section id="main" data-show=". | length | overZero">
+				<input id="toggle-all" type="checkbox" data-on-click=":toggle" data-checked=":allCompleted < . .child" data-show=":all < . | length | overZero">
 				<label for="toggle-all">Mark all as complete</label>
 				<ul id="todo-list">
-					<li data-each-todo=":todos < .items .mode" data-class-completed="todo.completed" data-class-editing="todo.editable">
+					<li data-each-todo=":todos < . .mode" data-class-completed="todo.completed" data-class-editing="todo.editable">
 						<div class="view">
 							<input class="toggle" type="checkbox" data-checked="todo.completed">
-							<label data-text="todo.title" data-on-dblclick="todo:editable"></label>
+							<label data-text="todo.title" data-on-dblclick="todo:setEditable"></label>
 							<button class="destroy" data-on-click="todo:destroy"></button>
 						</div>
-						<input class="edit" data-value="todo.title" data-on-change="todo:uneditable">
+						<input class="edit" data-value="todo.title" data-on-blur="todo:save" data-on-change="todo:save">
 					</li>
 				</ul>
 			</section>
-			<footer id="footer" data-show=":all < .items | length | overZero">
+			<footer id="footer" data-show=":all < . .child | length | overZero">
 				<span id="todo-count">
-					<strong data-text=":active < .items | length"></strong>
-					 item<span data-show=":active < .items | length | plural">s</span> left
+					<strong data-text=":active < . .child | length"></strong>
+					 item<span data-show=":active < . .child | length | plural">s</span> left
 				</span>
 				<ul id="filters">
 					<li>
@@ -46,7 +46,7 @@
 						<a href="#/completed">Completed</a>
 					</li>
 				</ul>
-				<button id="clear-completed" data-on-click=":clear" data-show=":completed < .items | length | overZero">Clear completed (<span data-text=":completed < .items | length"></span>)
+				<button id="clear-completed" data-on-click=":clear" data-show=":completed < . .child | length | overZero">Clear completed (<span data-text=":completed < . .child | length"></span>)
 				</button>
 			</footer>
 		</section>
@@ -56,6 +56,7 @@
 		<p>Created by <a href="http://github.com/Contra">Contra</a></p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
+
 	<script src="../../../assets/base.js"></script>
 	<script src="../../../assets/jquery.min.js"></script>
 	<script src="../../../assets/require.min.js"></script>
