--- a/labs/architecture-examples/dart/web/index.html
+++ b/labs/architecture-examples/dart/web/index.html
@@ -21,7 +21,7 @@
 			<ul id="todo-list"></ul>
 		</section>
 		<footer id="footer">
-			<span id="todo-count"><strong>1</strong> item left</span>
+			<span id="todo-count"><strong>0</strong> item left</span>
 			<ul id="filters">
 				<li>
 					<a class="selected" href="#/">All</a>
@@ -33,7 +33,7 @@
 					<a href="#/completed">Completed</a>
 				</li>
 			</ul>
-			<button id="clear-completed">Clear completed (1)</button>
+			<button id="clear-completed">Clear completed</button>
 		</footer>
 	</section>
 	<footer id="info">
