--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<img class="logo" src="site/img/logo.svg" width="500" height="86" alt="TodoMVC">
 				<p>Helping you <strong>select</strong> an MV* framework</p>
 				<nav>
-					<a href="https://github.com/addyosmani/todomvc/zipball/v1.0.1" class="zocial red">Download (1.0.1)</a>
+					<a href="https://github.com/addyosmani/todomvc/zipball/1.0.1" class="zocial red">Download (1.0.1)</a>
 					<a href="https://github.com/addyosmani/todomvc" class="zocial red">View project on GitHub</a>
 				</nav>
 			</div>
@@ -39,7 +39,7 @@
 				<p>Developers these days are spoiled with choice when it comes to selecting an <strong>MV* framework</strong> for structuring and organizing their JavaScript web apps.</p>
 				<p>Backbone, Ember, AngularJS, Spine... the list of new and stable solutions continues to grow, but just how do you decide on which to use in a sea of so many options?</p>
 				<p>To help solve this problem, we created <a href="https://github.com/addyosmani/todomvc">TodoMVC</a> - a project which offers the same Todo application implemented using MV* concepts in most of the popular JavaScript MV* frameworks of today.</p>
-				<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://todomvc.com" data-text="TodoMVC - Helping you select an MV* framework - Todo apps for Backbone.js, Ember.js, AngularJS, Spine and many more"></a>
+				<a href="https://twitter.com/share" class="twitter-share-button" data-via="tastejs" data-url="http://todomvc.com" data-text="TodoMVC - Helping you select an MV* framework - Todo apps for Backbone.js, Ember.js, AngularJS, and more"></a>
 				<div class="g-plusone" data-size="medium" data-annotation="none" data-href="http://todomvc.com"></div>
 			</div>
 			<div class="span8">
