--- a/architecture-examples/polymer/index.html
+++ b/architecture-examples/polymer/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-framework="polymer">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -10,12 +10,14 @@
 		<link rel="import" href="elements/td-todos.html">
 	</head>
 	<body>
-		<header>
-			<h1>todos</h1>
-		</header>
-		<polymer-localstorage id="storage" name="todos-polymer"></polymer-localstorage>
-		<td-model id="model" storageId="storage"></td-model>
-		<td-todos modelId="model"></td-todos>
+		<section id="todoapp">
+			<header id="header">
+				<h1>todos</h1>
+			</header>
+			<polymer-localstorage id="storage" name="todos-polymer"></polymer-localstorage>
+			<td-model id="model" storageId="storage"></td-model>
+			<td-todos modelId="model"></td-todos>
+		</section>
 		<footer id="info">
 			<p>Double-click to edit a todo</p>
 			<p>Created by <a href="http://www.polymer-project.org">The Polymer Authors</a></p>
